# lidar-localization-benchmark

./: .gitignore  README.md  pyproject.toml
assets/: figure_layout_notes.md
configs/: base.yaml
configs/benchmarks/: dropout_sweep.yaml  kidnapped_robot.yaml  map_complexity_sweep.yaml  noise_sweep.yaml  particle_count_sweep.yaml  portfolio_fast.yaml  portfolio_medium_noise.yaml  portfolio_medium_throughput.yaml  throughput_gpu.yaml  throughput_gpu_fast.yaml
configs/debug/: gpu_smoke.yaml  smoke.yaml
configs/maps/: map_suite_debug.yaml  map_suite_medium.yaml
configs/methods/: ekf.yaml  mcl.yaml
configs/render/: demo_kidnapped_recovery.yaml  demo_main_localization.yaml  demo_noise_robustness.yaml  demo_parallel_grid.yaml  demo_particle_convergence.yaml  figures.yaml  portfolio_demo_main_localization.yaml  portfolio_demo_noise_robustness.yaml  portfolio_demo_parallel_grid.yaml  portfolio_demo_particle_convergence.yaml  portfolio_fast_figures.yaml  (+4 more)
docs/: design_notes.md  results_checklist.md
massive_lidar_benchmark/: __init__.py
scripts/: build_portfolio_report.py  render_all_media.py  run_all_benchmarks.py  smoke_test.py  validate_portfolio_assets.py
tests/: helpers.py  test_config.py  test_ekf_shapes.py  test_episode_selection.py  test_fast_profile_acceptance.py  test_lidar_cpu.py  test_lidar_torch.py  test_map_generation.py  test_mcl_weights.py  test_metrics.py  test_portfolio_report.py  test_render_figures.py  test_render_strict_mode.py  test_render_video.py  test_runner_execution.py  test_throughput_metrics.py  test_trajectory_generation.py
(+38 files in other folders)
